--- a/main.html
+++ b/main.html
@@ -3,12 +3,32 @@
 <html>
 
 <head>
+	<title>Accessible Portfolio</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<header>
+		<h1>Portfolio</h1>
+	</header>
+	<nav>
+		<a href="#">Introduction</a>
+		<a href="#">Education</a>
+		<a href="#">Projects</a>
+	</nav>
+	<img src="https://img.freepik.com/free-photo/young-beautiful-girl-posing-black-leather-jacket-park_1153-8104.jpg?t=st=1725372422~exp=1725376022~hmac=08bef9ff87ebd170360bc5e1287c07343a3a4c0a888ded61ca8e1575f35fa5c4&w=360" alt="This is my pic">
+    <section>
+		<p>This is a brief introduction</p>
+	</section>
+	<h4>My hobbies</h4>
+	<ul>
+		<li>Dance</li>
+		<li>Yoga</li>
+		<li>Coding</li>
+	</ul>
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
