--- a/main.html
+++ b/main.html
@@ -10,22 +10,22 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header>
-		<h1>Portfolio</h1>
+		<h1 role="heading" >Portfolio</h1>
 	</header>
-	<nav>
+	<nav role="navigation">
 		<a href="#">Introduction</a>
 		<a href="#">Education</a>
 		<a href="#">Projects</a>
 	</nav>
-	<img src="https://img.freepik.com/free-photo/young-beautiful-girl-posing-black-leather-jacket-park_1153-8104.jpg?t=st=1725372422~exp=1725376022~hmac=08bef9ff87ebd170360bc5e1287c07343a3a4c0a888ded61ca8e1575f35fa5c4&w=360" alt="This is my pic">
+	<img  role="img" src="https://img.freepik.com/free-photo/young-beautiful-girl-posing-black-leather-jacket-park_1153-8104.jpg?t=st=1725372422~exp=1725376022~hmac=08bef9ff87ebd170360bc5e1287c07343a3a4c0a888ded61ca8e1575f35fa5c4&w=360" alt="This is my pic">
     <section>
 		<p>This is a brief introduction</p>
 	</section>
 	<h4>My hobbies</h4>
-	<ul>
-		<li>Dance</li>
-		<li>Yoga</li>
-		<li>Coding</li>
+	<ul role="list">
+		<li role="listitem">Dance</li>
+		<li role="listitem">Yoga</li>
+		<li role="listitem">Coding</li>
 	</ul>
 	
 	<script type="text/javascript" src="./script.js">
